# bibref-rs

./: .gitignore  AGENTS.md  Cargo.toml  build.rs
Samples/: references.bib
src/: bibtex.rs  lib.rs  main.rs  metadata.rs  search.rs
