[package]
name = "bibref-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arboard = "3"
gpui = "0.2.2"
gpui-component = "0.5.1"
quick-xml = { version = "0.36", features = ["serialize"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
webbrowser = "1"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
embed-resource = "3"
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"

[[bin]]
name = "bibref"
path = "src/main.rs"
